# SerialToDB

./: Cargo.toml  README.md
.github/workflows/: release.yml
config/: default.toml
src/: main.rs
